Fix error in yaml file